# extract-course-reqs

./: .gitignore  LICENSE  README.md  pyproject.toml
src/extract_course_reqs/: __init__.py  extract_course_reqs.py
tests/: test_normalize.py
